# OsnoveAlgoritmov

./: .gitignore  CMakeLists.txt
DepthFirstSearch/: dfs.cpp  dfs.h  dfsIMPL.cpp
Dijkstrov/: Dijkstrov.cpp  Dijkstrov.h  DijkstrovIMPL.cpp  graf.txt
FloydWarshallow/: FloydWarshallow.cpp  FloydWarshallow.h  FloydWarshallowIMPL.cpp  graf1.txt  graf2.txt  graf3.txt
Kruskal/: Kruskal.cpp  Kruskal.h  KruskalIMPL.cpp  graf2.txt
Quicksort/: Quicksort.cpp  Quicksort.h  QuicksortIMPL.cpp
